enable profile and added new properties with profile. application.properties are override by profile specific properties.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,14 @@ guru:
         username: JMS Username..........
         password: somepass.........
         url: SomeUrl.........
+
+---
+spring:
+  profiles:
+    active: de
+
+guru:
+  jms:
+    username: JMS Username.....$$$$.....
+    password: somepass.....$$$.....
+    url: SomeUrl....$$$.....
