--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 #spring.profiles.active=es
 #spring.profiles.active=en
-#spring.profiles.active=de
+spring.profiles.active=de
+
+guru.username=Tejas
+guru.password=somepass
+guru.dburl=https://github.com/tejassheth/
